[package]
name = "bentorrent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1"
env_logger = "0.11"
futures = "0.3"
hex = "0.4"
log = "0.4"
nom = "8.0.0"
sha1 = "0.10"
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
url = "2.5"
urlencoding = "2.1.3"
reqwest = { version = "0.12" }
